@@ -148,7 +148,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
         return (JComponent) painel;
     }
 
-    protected JComponent buildMainDisplayArea(String figure) {
+    protected void buildMainDisplayArea(String figure) {
         mainUI = Globals.getGui();
         this.createActionObjects();
         toolbar = this.setUpToolBar();
@@ -182,7 +182,6 @@ public class MipsXray extends AbstractMarsToolAndApplication {
         painel.add(label, BorderLayout.WEST);
         painel.add(toolbar, BorderLayout.NORTH);
         this.setResizable(false);
-        return (JComponent) painel;
     }
 
     protected void addAsObserver() {
@@ -292,7 +291,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
         public int oppositeAxis;
         private boolean isMovingXaxis;
         private Color color;
-        private boolean first_interaction;
+        private boolean firstInteraction;
         private boolean active;
         private final boolean isText;
         private final ArrayList<Integer> targetVertex;
@@ -306,7 +305,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
             this.name = name;
             this.oppositeAxis = oppositeAxis;
             this.isMovingXaxis = isMovingXaxis;
-            this.first_interaction = true;
+            this.firstInteraction = true;
             this.active = false;
             this.isText = isText;
             this.color = new Color(0, 153, 0);
@@ -409,12 +408,12 @@ public class MipsXray extends AbstractMarsToolAndApplication {
             this.color = color;
         }
 
-        public boolean isFirst_interaction() {
-            return first_interaction;
+        public boolean isNotFirstInteraction() {
+            return !firstInteraction;
         }
 
-        public void setFirst_interaction(boolean first_interaction) {
-            this.first_interaction = first_interaction;
+        public void setFirstInteraction(boolean firstInteraction) {
+            this.firstInteraction = firstInteraction;
         }
 
         public boolean isActive() {
@@ -618,8 +617,8 @@ public class MipsXray extends AbstractMarsToolAndApplication {
                 for (Vector<Vertex> vert : outputGraph) {
                 }
 
-                vertexList.get(0).setActive(true);
-                vertexTraversed.add(vertexList.get(0));
+                vertexList.getFirst().setActive(true);
+                vertexTraversed.add(vertexList.getFirst());
             } catch (Exception e) {
                 e.printStackTrace();
             }
@@ -1123,7 +1122,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
             for (int i = 0; i < size; i++)
                 track[i] = v.getInit() + i;
             if (v.isActive()) {
-                v.setFirst_interaction(false);
+                v.setFirstInteraction(false);
                 for (int i = 0; i < size; i++) {
                     if (track[i] <= v.getCurrent()) {
                         g2d.setColor(v.getColor());
@@ -1133,7 +1132,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
                 if (v.getCurrent() == track[size - 1])
                     v.setActive(false);
                 v.setCurrent(v.getCurrent() + 1);
-            } else if (!v.isFirst_interaction()) {
+            } else if (v.isNotFirstInteraction()) {
                 for (int i = 0; i < size; i++) {
                     g2d.setColor(v.getColor());
                     g2d.fillRect(track[i], v.getOppositeAxis(), 3, 3);
@@ -1155,7 +1154,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
                 track[i] = v.getInit() - i;
 
             if (v.isActive()) {
-                v.setFirst_interaction(false);
+                v.setFirstInteraction(false);
                 for (int i = 0; i < size; i++) {
                     if (track[i] >= v.getCurrent()) {
                         g2d.setColor(v.getColor());
@@ -1166,7 +1165,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
                     v.setActive(false);
 
                 v.setCurrent(v.getCurrent() - 1);
-            } else if (!v.isFirst_interaction()) {
+            } else if (v.isNotFirstInteraction()) {
                 for (int i = 0; i < size; i++) {
                     g2d.setColor(v.getColor());
                     g2d.fillRect(track[i], v.getOppositeAxis(), 3, 3);
@@ -1194,7 +1193,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
             }
 
             if (v.isActive()) {
-                v.setFirst_interaction(false);
+                v.setFirstInteraction(false);
                 for (int i = 0; i < size; i++) {
                     if (track[i] >= v.getCurrent()) {
                         g2d.setColor(v.getColor());
@@ -1205,7 +1204,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
                     v.setActive(false);
                 v.setCurrent(v.getCurrent() - 1);
 
-            } else if (!v.isFirst_interaction()) {
+            } else if (v.isNotFirstInteraction()) {
                 for (int i = 0; i < size; i++) {
                     g2d.setColor(v.getColor());
                     g2d.fillRect(v.getOppositeAxis(), track[i], 3, 3);
@@ -1227,7 +1226,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
                 track[i] = v.getInit() + i;
 
             if (v.isActive()) {
-                v.setFirst_interaction(false);
+                v.setFirstInteraction(false);
                 for (int i = 0; i < size; i++) {
                     if (track[i] <= v.getCurrent()) {
                         g2d.setColor(v.getColor());
@@ -1238,7 +1237,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
                 if (v.getCurrent() == track[size - 1])
                     v.setActive(false);
                 v.setCurrent(v.getCurrent() + 1);
-            } else if (!v.isFirst_interaction()) {
+            } else if (v.isNotFirstInteraction()) {
                 for (int i = 0; i < size; i++) {
                     g2d.setColor(v.getColor());
                     g2d.fillRect(v.getOppositeAxis(), track[i], 3, 3);
@@ -1274,7 +1273,7 @@ public class MipsXray extends AbstractMarsToolAndApplication {
                     actionInFunctionalBlock = new TextLayout(" ", new Font("Verdana", Font.BOLD, 13), frc);
             }
             if (v.isActive()) {
-                v.setFirst_interaction(false);
+                v.setFirstInteraction(false);
                 actionInFunctionalBlock.draw(g2d, v.getOppositeAxis(), v.getCurrent());
                 if (v.getCurrent() == v.getEnd())
                     v.setActive(false);
